--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,8 @@ cortex-m-semihosting = "0.3.3"
 # See https://github.com/rust-embedded/critical-section for further details.
 cortex-m = { version = "0.7.4", features = ["critical-section-single-core"]}
 cortex-m-rt = { version = ">=0.6.15,<0.8", features = ["device"] }
-cortex-m-rtic = "1.0.0"
+# cortex-m-rtic = "1.0.0"
+rtic = {version = "2.0.1", features=["thumbv7-backend", "rtic-monotonics"]}
 # Panic behavior, see https://crates.io/keywords/panic-impl for alternatives
 # panic-halt = "0.2.0"
 # [target.'cfg(debug_assertions)'.dependencies] I don't know if this works!
