--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
             "cwd": "${workspaceRoot}",
             "preLaunchTask": "Cargo Build (debug)",
             "runToEntryPoint": "main",
-            "executable": "./target/thumbv7em-none-eabihf/debug/hello-rust-embedded",
+            "executable": "./target/thumbv7em-none-eabi/debug/rust_bldc_stm32",
             /* Run `cargo build --example hello` and uncomment this line to run semi-hosting example */
             //"executable": "./target/thumbv7m-none-eabi/debug/examples/hello",
             "cpu": "cortex-m4",
@@ -38,15 +38,15 @@
             ],
             "interface": "swd",
             "runToEntryPoint": "main",
-            "executable": "./target/thumbv7em-none-eabihf/debug/hello-rust-embedded",
+            "executable": "./target/thumbv7em-none-eabi/debug/rust_bldc_stm32",
             /* Run `cargo build --example itm` and uncomment this line to run itm example */
-            // "executable": "./target/thumbv7em-none-eabihf/debug/examples/itm",
-            "device": "STM32F767",
+            // "executable": "./target/thumbv7em-none-eabi/debug/examples/itm",
+            "device": "STM32F302R8T6",
             "configFiles": [
                 "interface/stlink-v2-1.cfg",
-                "target/stm32f7x.cfg"
+                "target/stm32f3x.cfg"
             ],
-            "svdFile": "${workspaceRoot}/.vscode/STM32F767.svd",
+            "svdFile": "${workspaceRoot}/.vscode/STM32F302.svd",
             "rttConfig": {
                 "enabled": true,
                 "address": "auto",
