--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file docker/Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file docker/Dockerfile --build-arg USER_ID=1000 --build-arg GROUP_ID=1000 --tag my-image-name:$(date +%s)
